Archivos Yaml/ingress-gateway-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: gateway1-public
  namespace: proyecto
spec:
  rules:
    - host: nginx.siguago.tk
      http:
        paths:
          - backend:
              serviceName: app-go-nats-srv
              servicePort: 5000
            path: /
